articles/static/articles/main.css
/*
font-family: 'Lobster', cursive;
font-family: 'Orbitron', sans-serif;
font-family: 'Dosis', sans-serif;
font-family: 'Vollkorn', serif;
*/

html {
    margin: 0;
    padding: 0;
}

body {
    font-family: 'Vollkorn', serif;
    margin: 0;
    padding: 0;
}

#entree {
    background-color: crimson;
    margin: 0 auto;
    height: 175px;
}
#entree-logo {
}
#entree-motto {
}
#entree-rigth {
}

.coasts {
    overflow: hidden;
}
div#westcoast {
    max-width: 70%;
    float: left;
}

.post-title {
    font-family: 'Lobster', cursive;
    font-size: 20px;
    max-width: 570px;
    max-height: 380px;
    border-radius: 6px;
    padding-left: 6px;
    margin-left: 100px;
    margin-top: 30px;
}
.post-body {
    font-family: 'Dosis', sans-serif;
    font-size: 23px;
    margin-left: 15px;
    padding: 10px;
}

div#eastcoast {
    margin-left: 76%;
    margin-right: 15px;
}
.func {
    margin-top: 40px;
    margin-bottom: 160px;
}

.caption {
    margin: 0;
    padding: 0;
    background-color: cornFlowerBlue;
    text-align: center;
}
.caption-header {
    padding: 10px;
    font-size: 26px;
    font-family: 'Lobster', cursive;
}

.comments-section {
    margin: 0;
    padding: 0;
    background-color: cadetBlue;
}
.comment {
    max-width: 550px;
    background-color: seaShell;
    margin-left: 5%;
}
.comment-header {
    font-size: 23px;
    font-family: 'Vollkorn', serif;
}
.message {
    font-size: 20px;
    font-family: 'Dosis', sans-serif;
}

